# msi2

./: .gitignore  Dockerfile  Dockerfile-cuda  Dockerfile-generic  README.md  compose.yaml  requirements.txt
hw3/: readme.md
hw3/src/: main.py  model.py  nn_clasifier.py  prediction_api_tests.py  prediction_model_training.html  prediction_model_training.html:Zone.Identifier  prediction_model_training.ipynb
msi2-lab01/: msi2-lab01.html
msi2-lab01/src/: ex01.ipynb  ex02.ipynb  ex03.ipynb
msi2-lab02/: msi2-lab02.html
msi2-lab02/src/lab02/: ex01.ipynb  ex02.ipynb  ex03.ipynb  ex04.ipynb  ex05.ipynb  ex06.ipynb  ex07.ipynb  ex08.ipynb  ex09.ipynb  ex10.ipynb
msi2-lab03/: msi2-lab03.html
msi2-lab03/src/: ex01.ipynb  ex02.ipynb  ex03.ipynb  ex04.ipynb  ex05.ipynb  ex06.ipynb  ex07.ipynb  ex08.ipynb
msi2-lab04/: msi2-lab04.html
msi2-lab04/src/: ex02.ipynb  ex03.ipynb  ex04.ipynb  ex05.ipynb  ex06.ipynb  ex07.ipynb  ex08.ipynb  helpers.py
msi2-lab05/: README.md  msi2-lab05.html  pyproject.toml
msi2-lab05/src/ex01/: ex01.ipynb
msi2-lab05/src/ex02/: ex02.ipynb
msi2-lab05/src/ex03/: ex03.ipynb
msi2-lab05/src/ex04/: ex04.ipynb
msi2-lab05/src/ex05/: ex05.ipynb
msi2-w2/: elments-of-stats.html  intro-to-model-eval.html
