[project]
name = "msi2-lab05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "keras>=3.9.2",
    "matplotlib>=3.10.3",
    "ruff>=0.11.9",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]